# TheRugert

./: .gitignore  CMakeLists.txt  README.md
include/: BaseWindow.hpp  MouseHandler.hpp  Player.hpp  SharedMetadata.hpp
src/: main.cpp
